--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':library'
-rootProject.name='AndroidSQLServerCommunication'
+include ':app'
+rootProject.name = 'AndroidSQLServerCommunication'
